--- a/P2.2: Sorted File/README
+++ b/P2.2: Sorted File/README
@@ -31,3 +31,12 @@ determine the location to store additional files.
 own code. If you are using additional headers, modify the Makefile to include
 them as well. Then compile and execute the driver and follow the on-screen
 instructions.
+
+Submission Instructions: 
+========================= 
+
+Same as a2 (Instead of creating directory a2, create directory a2-2. The turnin
+file should be called a2-2.tar.gz)
+The executable produced by your file should be called a22.out
+
+-------------------------------------------------------------------------------
